--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.8"
 pytest = "^6.2.4"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = ">=5.2"
 pytest-watch = "^4.2.0"
 black = "^20.8b1"
 
